[gd_scene load_steps=4 format=3 uid="uid://dfcoqi7q3jups"]

[ext_resource type="Script" uid="uid://dlkjn4wddnl7u" path="res://scripts/Main.gd" id="1_elqb8"]

[sub_resource type="Animation" id="Animation_elqb8"]
resource_name = "new_animation"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rvslj"]
_data = {
&"new_animation": SubResource("Animation_elqb8")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_elqb8")
metadata/_edit_vertical_guides_ = [573.0]

[node name="SceneContainer" type="Node2D" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="LoadingScreen" type="ColorRect" parent="UILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.09803922, 0.09803922, 0.13333334, 1)

[node name="LoadingLabel" type="Label" parent="UILayer/LoadingScreen"]
layout_mode = 0
offset_left = 543.0
offset_top = 575.0
offset_right = 617.0
offset_bottom = 598.0
text = "Memuat.."
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rvslj")
}
